Support explicitly named workers

--- a/python/lsst/qserv/schema/migrations/worker/migrate-None-to-3.sql.jinja
+++ b/python/lsst/qserv/schema/migrations/worker/migrate-None-to-3.sql.jinja
@@ -56,7 +56,9 @@ CREATE TABLE `qservw_worker`.`Id` (
   UNIQUE KEY (`type`))
 ENGINE=InnoDB;
 
-INSERT INTO `qservw_worker`.`Id` (`id`) VALUES (UUID());
+INSERT INTO `qservw_worker`.`Id` (`id`) VALUES (
+  COALESCE(NULLIF('{{ worker_name }}', ''), CONCAT(UUID()))
+);
 
 
 -- -----------------------------------------------------
